--- a/Style/style.css
+++ b/Style/style.css
@@ -8,54 +8,40 @@
 
 body {
     font-family: sans-serif;
+    background-color: black;
 }
 
-.container {
-    max-width: 1200px;
-    margin: o auto;
-}
-
-.header {
-    background-image: linear-gradient(
-        rgba(0,0,0,0.7),
-        rgba(0,0,0,0.7)), url(/public/mianimage.jpg);
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 70vh;
-    display: flex;
-    align-items: center;
-}
-
-.menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: o;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.menu .navbar ul li {
-    position: relative;
-    float: left;
-}
-
-.menu .navbar ul li a {
-    font-size: 18px;
-    padding: 20px;
-    color: white;
+header {
+    background-color: aquamarine;
+    height: 100px;
+    width: 100%;
     display: block;
-    font-weight: 600;
 }
 
-#menu {
-    display: none;
+.menu-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
 }
 
-.menu-icono{
-    width: 25px;
+.logo-container{
+    background-color: rgb(220, 150, 150);
+    width: 300px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.logo-container img{
+    height: 120px;
+    width: 120px;
+}
 
+.enlaces-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
