--- a/Style/style.css
+++ b/Style/style.css
@@ -45,3 +45,17 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
+.enlaces-container a{
+    margin-left: 10px;
+    padding: 10px 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: bacground-color 0.3s, color 0.3s;
+}
+
+.enlaces-container a:hover {
+    background-color: rgb(220, 150, 150);
+    color: white;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
+}
