--- a/Style/IndexBodyStyle.css
+++ b/Style/IndexBodyStyle.css
@@ -1,15 +1,14 @@
 section {
-    max-width: 1240px;
+    max-width: 82%;
     margin: 0 auto;
-    display: block;
+    display: flex;
     justify-content: space-between;
-    height: 800px;
-    background-color: blue;
+    height: 900px;
     padding: 20px;
 }
 
 .aside-container {
-    background-color: aquamarine;
+    background-color: rgba(255, 255, 255, 0.8);
     width: 300px;
     color:black;
     display: flex;
@@ -17,6 +16,7 @@ section {
     flex-direction: column;
     padding: 30px;
     border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
 }
 
 .aside-container a {
@@ -30,7 +30,18 @@ section {
 }
 
 .aside-container a:hover {
-    background-color: rgb(220, 150, 150);
+    background-color: aquamarine;
     color: white;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
+}
+
+.imginfo-container {
+    margin-left: 20px;
+    width: 86%;
+    height: 100%;
+    display: flex;
+    background-image: url(/public/imgbanner.webp);
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
 }
