--- a/Style/IndexBodyStyle.css
+++ b/Style/IndexBodyStyle.css
@@ -44,4 +44,42 @@ section {
     background-size: cover;
     background-position: center;
     border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
+}
+
+.info-container { 
+    margin: 250px auto;
+    color: white;
+    text-align: center;
+}
+
+.info-container h1 {
+    margin-bottom: 30px;
+    font-size: 50px;
+}
+
+.text-container {
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0.3);
+    max-width: 60%;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 80px;
+}
+
+.info-container a {
+    padding: 25px 50px;
+    background-color: rgb(255, 238, 0);
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.info-container a:hover {
+    background-color: rgb(220, 150, 150);
+    color: white;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
 }
