--- a/Style/IndexBodyStyle.css
+++ b/Style/IndexBodyStyle.css
@@ -83,3 +83,10 @@ section {
     color: white;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
 }
+
+.general {
+    background-color:  rgba(255, 255, 255, 0.8);
+    max-width: 80%;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
