--- a/Style/headerstyle.css
+++ b/Style/headerstyle.css
@@ -18,6 +18,7 @@ header {
     height: 100px;
     width: 100%;
     display: block;
+    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.8);
 }
 
 .menu-container{
