--- a/Style/IndexBodyStyle.css
+++ b/Style/IndexBodyStyle.css
@@ -90,3 +90,8 @@ section {
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
     border-radius: 10px;
 }
+
+.form-container {
+    width: 50px;
+    background-color: aqua;
+}
