--- a/Style/FormRegStyle.css
+++ b/Style/FormRegStyle.css
@@ -2,7 +2,6 @@ section {
     max-width: 82%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
     padding: 20px;
     height: 700px;
 }
@@ -15,34 +14,13 @@ section {
     height: 100%;
     border-radius: 15px;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
-}
-
-.img-container {
-    margin-left: 20px;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    background-image: url(/public/log.jpg);
-    background-size: cover;
-    background-position: center;
-    border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;
-}
-
-.form-container h1 {
-    margin: 0 auto;
-}
-
-.form-container {
-    width: 50%;
-    padding: 8%;
-    display: flex;
+    padding: 5%;
     flex-direction: column;
 }
 
 .formulario {
 	display: grid;
-	grid-template-columns: 1fr;
+	grid-template-columns: 1fr 1fr;
 	gap: 30px;
 }
 
@@ -97,6 +75,11 @@ section {
 	margin-right: 10px;
 }
 
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+	grid-column: span 2;
+}
+
 .formulario__mensaje {
 	height: 45px;
 	line-height: 45px;
@@ -123,7 +106,7 @@ section {
 .formulario__btn {
 	height: 45px;
 	line-height: 45px;
-	width: 100%;
+	width: 30%;
 	background: #000;
 	color: #fff;
 	font-weight: bold;
@@ -134,7 +117,7 @@ section {
 }
 
 .formulario__btn:hover {
-	box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.5);
+	box-shadow: 3px 0px 30px rgba(163,163,163, 1);
 }
 
 .formulario__mensaje-exito {
