--- a/Style/FormRegStyle.css
+++ b/Style/FormRegStyle.css
@@ -129,3 +129,21 @@ section {
 .formulario__mensaje-exito-activo {
 	display: block;
 }
+
+.formulario__grupo-correcto .formulario__validacion-estado {
+	color: #1ed12d;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+	color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+	color: #bb2929;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+	border: 3px solid #bb2929;
+}
